feat: include date-fns package, style tasks

--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
 		"build": "webpack --config webpack.prod.js",
 		"deploy": "git checkout gh-pages && git merge main --no-edit && npm run clean-build && git add dist -f && git commit -m \"Deployment commit\" && git subtree push --prefix dist origin gh-pages ",
 		"postdeploy": "git checkout main"
+	},
+	"dependencies": {
+		"date-fns": "^4.1.0"
 	}
 }
